Improved File Selector: allow to use path to a FAT mounted image on all cases
Improved Visual Cassette Tape window: support standard tape too
Improved Custom rom setting adding a Reset machine option
Improved DivMMC, DivIDE and ZXMMC emulation: allow to enable them even if no MMC/SD card or IDE inserted
Improved View Basic window: allow lines > 9999, useful for protected programs

* Fixes:

Fixed semaphore locking on Windows
Fixed cpu usage calculation when footer is disabled
Fixed setting esxdos handler root dir when loading a .nex file without path from command line
Fixed bug restoring ZSF snapshot with DivIDE enabled
Fixed segfault when pressing CTRL-C on console
Fixed PCW palette colour changes
Fixed Chloe keyboard: allow fast text writing
Fixed toggle breakpoint on a position that already had a breakpoint when breakpoints were disabled
Fixed smartloading a tape file when a dsk is inserted
Fixed visual casette tape when inserting an unsupported tape
Fixed write protect tab on visual hilow datadrive window
Fixed File Selector column for "<dir>" text on folders with utf-8 characters
Fixed separator menu item on stdout video driver
Fixed showing minimum volume on External Audio Source window

----


ZEsarUX 12 - Bubble Bobble edition. 16 January 2025

* New things added:

Added ZX Microdrive emulation on ZX Spectrum: that includes:
- Standard MDR emulation. Allow to browse inside MDR files, see file map, fragmentation, rename files, sectors info, chkdsk and emulate bad sectors
- Raw microdrive emulation. Supporting other non-interface1 rom file formats, like extending microdrive space with Multiface 128 or CP/M for LEC memory. Allow to see microdrive raw map (gap zones, sync bytes, data) and have "real problems", like autogenerate bad sectors or stretching the microdrive when it's new.
- Simulate data sound on read and write
- Visual Microdrive: Allow to see a microdrive cartridge in action

Added Visual Cassette Tape window
Added LEC memory extension emulation